Bug 128429 - FILEOPEN: DOCX: Vertical text is imported horizontally
Summary: FILEOPEN: DOCX: Vertical text is imported horizontally
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks:
 
Reported: 2019-10-28 12:34 UTC by Xisco Faulí
Modified: 2019-12-04 12:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.4 Master (12.87 KB, image/png)
2019-10-28 12:34 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-10-28 12:34:34 UTC
Created attachment 155364 [details]
comparison MSO 2010 and LibreOffice 6.4 Master

Steps to reproduce:
1. Open attachment 87042 [details] from bug 70076

-> Text is horizontal. See comparison image

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: c4d760b9edf0399955d30a0dfbe5f7b1b1ed37cb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-10-28 12:48:42 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=bffe6a496fb1c69499770d96fefd7a3609712676

author	Miklos Vajna <vmiklos@collabora.com>	2019-07-04 21:37:14 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-07-05 09:04:03 +0200
commit bffe6a496fb1c69499770d96fefd7a3609712676 (patch)
tree 32d4e6b4d7fdc4a514c18ff960413b3b500ee674
parent 623ad884051ad4ea17ba7baa77076c49000e49fa (diff)
sw btlr writing mode: handle import from VML

Bisected with:

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2019-12-03 08:24:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca7004569b39721c3e7247551a43d544fd3204fe

tdf#128429 VML import: let mso-layout-flow-alt:bottom-to-top imply vertical

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-12-03 16:28:38 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/a1989fc85da8ae15e9ebb227edb845572e679b2b

tdf#128429 VML import: let mso-layout-flow-alt:bottom-to-top imply vertical

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-12-04 12:08:40 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 8f7010eb47119a2428b77f5d79fc8577d9914958
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!