tdf#128429 VML import: let mso-layout-flow-alt:bottom-to-top imply vertical

Normally layout flow is set to vertical to denote TBRL, and then
optionally there is a layout flow alt to denote BTLR, but the bugdoc
shows that the first may be missing.

So map to BTLR even in case only the alt layout flow is found in the
file.

Change-Id: I06fce738fca9aedc0de90ccebda3a24e99425326