oox/Module_oox.mk
@@ -27,6 +27,7 @@ $(eval $(call gb_Module_add_check_targets,oox,\
 	CppunitTest_oox_crypto \
 	CppunitTest_oox_mathml \
 	CppunitTest_oox_drawingml \
+	CppunitTest_oox_vml \
 ))
 
 # vim: set noet sw=4 ts=4:
